# LexPP

./: lexpp.cpp  meson.build
lexpp/: nfa.h
